--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SkillsFree</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="bg-dark">
     <header>
         <div w3-include-html="header.html"></div>
     </header>
+
+    <section class="container" style="margin-top: 100px;">
+        <div class="row gy-5 css-row">
+            <div class="col-sm-6">
+                <h1 class="css-text" style="margin-top: 100px; color: rgb(9, 218, 255);">SkillsFree</h1>
+
+                <p class="text-white mx-auto d-block" style="margin-top: 30px;">Learn anything, anywhere with <b style="color: rgb(9, 218, 255);">SkillsFree</b> list of courses from reputable learning platforms.</p>
+            </div>
+            <div class="col-sm-6">
+                <img src="img/learning.svg" alt="" class="img-fluid css-img">
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
