--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>SkillsFree</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
 </head>
 
 <body class="bg-dark">
@@ -19,8 +20,12 @@
         <div class="row gy-5 css-row">
             <div class="col-sm-6">
                 <h1 class="css-text" style="margin-top: 100px; color: rgb(9, 218, 255);">SkillsFree</h1>
+                <p class="text-white"><i>Learn and earn certificates</i></p>
 
                 <p class="text-white mx-auto d-block" style="margin-top: 30px;">Learn anything, anywhere with <b style="color: rgb(9, 218, 255);">SkillsFree</b> list of courses from reputable learning platforms.</p>
+
+                <button type="button" class="btn btn-info">Donate <i class="im im-gift-card" style="font-size: 20px;"></i></button>
+                <p class="text-white"><i>Your donations will be a gift for others</i></p>
             </div>
             <div class="col-sm-6">
                 <img src="img/learning.svg" alt="" class="img-fluid css-img">
