--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="text-white mx-auto d-block" style="margin-top: 30px;">Learn anything, anywhere with <b style="color: rgb(9, 218, 255);">SkillsFree</b> list of courses from reputable learning platforms.</p>
 
                 <button type="button" class="btn btn-info">Donate <i class="im im-gift-card" style="font-size: 20px;"></i></button>
-                <p class="text-white"><i>Your donations will be a gift for others</i></p>
+                <p class="text-white"><i>Your donations will be a gift for others.</i></p>
             </div>
             <div class="col-sm-6">
                 <img src="img/learning.svg" alt="" class="img-fluid css-img">
