--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>SkillsFree</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
 </head>
 
 <body class="bg-dark">
@@ -24,7 +23,7 @@
 
                 <p class="text-white mx-auto d-block" style="margin-top: 30px;">Learn anything, anywhere for free with <b style="color: rgb(9, 218, 255);">SkillsFree</b> list of courses from reputable learning platforms.</p>
 
-                <button type="button" class="btn btn-info">Donate <i class="im im-gift-card" style="font-size: 20px;"></i></button>
+                <button type="button" class="btn btn-info" style="margin-top:20px;">Donate</button>
                 <p class="text-white"><i>Your donations will be a gift for others.</i></p>
             </div>
             <div class="col-sm-6">
@@ -32,6 +31,65 @@
             </div>
         </div>
     </section>
+
+    <main>
+
+        <div class="container" style="margin-top:125px; margin-bottom:100px ;">
+
+            <div class="row gy-5">
+                <div class="col-sm-4 ">
+                    <img src="img/udemy2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                    <p class="text-center" style="margin-top:-50px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                </div>
+
+                <div class="col-sm-4">
+                    <img src="img/coursera2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                    <p class="text-center" style="margin-top:-50px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                </div>
+
+                <div class="col-sm-4">
+                    <img src="img/edx2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                    <p class="text-center" style="margin-top:-10px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="img/linkedin2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                    <p class="text-center" style="margin-top:-50px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                </div>
+
+                <div class="col-sm-4">
+                    <img src="img/google2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                    <p class="text-center" style="margin-top:-50px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                </div>
+
+                <div class="col-sm-4">
+                    <img src="img/microsoft2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                    <p class="text-center" style="margin-top:-50px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="img/amazon2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                    <p class="text-center" style="margin-top:-50px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                </div>
+
+                <div class="col-sm-4">
+                    <img src="img/cisco2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                    <p class="text-center" style="margin-top:-20px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                </div>
+
+                <div class="col-sm-4">
+                    <img src="img/freecodecamp2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
+                    <p class="text-center" style="margin-top:-20px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                </div>
+            </div>
+        </div>
+
+
+    </main>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
