--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <div class="col-sm-4">
                     <img src="img/coursera2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-50px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                    <p class="text-center" style="margin-top:-50px;"><a href="coursera-free-courses.html" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
                 </div>
 
                 <div class="col-sm-4">
