--- a/coursera-free-courses.html
+++ b/coursera-free-courses.html
@@ -26,7 +26,7 @@
 
                     <p class="text-white mx-auto d-block" style="margin-top: -30px;">Coursera is the global online learning platform that offers anyone, anywhere access to online courses and degrees from world-class universities and companies.</p>
 
-                    <button type="button" class="btn btn-info" style="margin-top:20px;">Donate</button>
+                    <button type="button" class="btn btn-info" style="margin-top:20px;">Donate to SkillsFreeutton>
                     <p class="text-white"><i>Your donations will be a gift for others.</i></p>
                 </div>
                 <div class="col-sm-6">
