--- a/coursera-free-courses.html
+++ b/coursera-free-courses.html
@@ -36,7 +36,7 @@
             </div>
         </section>
 
-        <section class="container" style="margin-top:170px;">
+        <section class="container" style="margin-top:170px; margin-bottom: 100px;">
             <div class="card bg-secondary">
                 <div class="card-header">
                     <h2 class="card-title text-white">Coursera Free Certificate Courses</h2>
