--- a/coursera-free-courses.html
+++ b/coursera-free-courses.html
@@ -37,7 +37,7 @@
         </section>
 
         <section class="container" style="margin-top:170px; margin-bottom: 100px;">
-            <div class="card bg-primary">
+            <div class="card" style="background-color: #343a40;">
                 <div class="card-header">
                     <h2 class="card-title" style=" color: rgb(9, 218, 255);">Coursera Free Certificate Courses</h2>
                 </div>
@@ -47,28 +47,28 @@
                     <p class="card-text text-white"><i>Note: Course is free until <b>April 30, 2021</b></i></p>
 
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/financial-planning?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-Jn.6QQg7LeY_eK4JBLrd4w&siteID=SAyYsTvLiGQ-Jn.6QQg7LeY_eK4JBLrd4w&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                        <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/financial-planning?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-Jn.6QQg7LeY_eK4JBLrd4w&siteID=SAyYsTvLiGQ-Jn.6QQg7LeY_eK4JBLrd4w&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                 class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link "></i> Financial Planning for Young Adults</a> from University of Illinois at Urbana-Champaign</li>
 
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/feedback?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-BdIvr59cn4fw31t7SAQeVg&siteID=SAyYsTvLiGQ-BdIvr59cn4fw31t7SAQeVg&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                        <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/feedback?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-BdIvr59cn4fw31t7SAQeVg&siteID=SAyYsTvLiGQ-BdIvr59cn4fw31t7SAQeVg&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                 class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Giving Helpful Feedback</a> from University of Colorado Boulder</li>
 
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/machine-learning-duke?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-XBjXYbd6DVpT3BuJNjNshA&siteID=SAyYsTvLiGQ-XBjXYbd6DVpT3BuJNjNshA&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                        <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/machine-learning-duke?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-XBjXYbd6DVpT3BuJNjNshA&siteID=SAyYsTvLiGQ-XBjXYbd6DVpT3BuJNjNshA&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                 class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Introduction to Machine Learning</a> from Duke University</li>
 
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/compthinking?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-q6Y790raoGK6as3_UbSusA&siteID=SAyYsTvLiGQ-q6Y790raoGK6as3_UbSusA&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                        <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/compthinking?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-q6Y790raoGK6as3_UbSusA&siteID=SAyYsTvLiGQ-q6Y790raoGK6as3_UbSusA&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                 class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Problem Solving Using Computational Thinking</a> from University of Michigan</li>
 
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/inclusiveleadership?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-AfxtpM_eLIBwR5XlkuUS.w&siteID=SAyYsTvLiGQ-AfxtpM_eLIBwR5XlkuUS.w&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                        <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/inclusiveleadership?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-AfxtpM_eLIBwR5XlkuUS.w&siteID=SAyYsTvLiGQ-AfxtpM_eLIBwR5XlkuUS.w&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                 class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Inclusive Leadership: The Power of Workplace Diversity</a> from University of Colorado System</li>
 
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://click.linksynergy.com/deeplink?id=SAyYsTvLiGQ&mid=40328&u1=gtc_www_classcentral_com&murl=https%3A%2F%2Fwww.coursera.org%2Flearn%2Fmusic-for-wellness%3Fedocomorp%3Dcoursera-birthday-2021" class="text-white text-decoration-none"
+                        <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://click.linksynergy.com/deeplink?id=SAyYsTvLiGQ&mid=40328&u1=gtc_www_classcentral_com&murl=https%3A%2F%2Fwww.coursera.org%2Flearn%2Fmusic-for-wellness%3Fedocomorp%3Dcoursera-birthday-2021" class="text-white text-decoration-none"
                                 style="cursor: pointer;"><i class="bi bi-link"></i> Music for Wellness</a> from Berklee College of Music</li>
 
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/building-modern-python-applications-on-aws?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-ePEgf.dnlPfJlWOOCZAhNA&siteID=SAyYsTvLiGQ-ePEgf.dnlPfJlWOOCZAhNA&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                        <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/building-modern-python-applications-on-aws?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-ePEgf.dnlPfJlWOOCZAhNA&siteID=SAyYsTvLiGQ-ePEgf.dnlPfJlWOOCZAhNA&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                 style="cursor: pointer;" class="text-white text-decoration-none"><i class="bi bi-link"></i> Building Modern Python Applications on AWS</a> from Amazon Web Services</li>
 
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/develop-windows-apps-gcp?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-POM1aSNoqHQjagHqU6ZWFw&siteID=SAyYsTvLiGQ-POM1aSNoqHQjagHqU6ZWFw&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                        <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/develop-windows-apps-gcp?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-POM1aSNoqHQjagHqU6ZWFw&siteID=SAyYsTvLiGQ-POM1aSNoqHQjagHqU6ZWFw&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                 class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Develop and Deploy Windows Applications on Google Cloud Platform</a> from Google Cloud</li>
 
                         <div class="card-header">
@@ -77,19 +77,19 @@
                         <p class="card-text text-white">These free certificates are a different offer from the above list and are available until and past July 28th, 2021.</p>
 
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/covid-19-contact-tracing?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-NAPi0XIlQ2dr0FCME0bLGQ&siteID=SAyYsTvLiGQ-NAPi0XIlQ2dr0FCME0bLGQ&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                            <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/covid-19-contact-tracing?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-NAPi0XIlQ2dr0FCME0bLGQ&siteID=SAyYsTvLiGQ-NAPi0XIlQ2dr0FCME0bLGQ&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                     class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> COVID-19 Contact Tracing</a> from Johns Hopkins University</li>
 
-                            <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/covid-19-training-healthcare?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-35OA43NLD0QOWorswDwbKw&siteID=SAyYsTvLiGQ-35OA43NLD0QOWorswDwbKw&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                            <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/covid-19-training-healthcare?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-35OA43NLD0QOWorswDwbKw&siteID=SAyYsTvLiGQ-35OA43NLD0QOWorswDwbKw&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                     class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> COVID-19 Training for Healthcare Workers</a> from Stanford University</li>
 
-                            <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/measuring-and-maximizing-impact-of-covid-19-contact-tracing?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-AdfkGChN64QHTHZwellO5g&siteID=SAyYsTvLiGQ-AdfkGChN64QHTHZwellO5g&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                            <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/measuring-and-maximizing-impact-of-covid-19-contact-tracing?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-AdfkGChN64QHTHZwellO5g&siteID=SAyYsTvLiGQ-AdfkGChN64QHTHZwellO5g&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                     class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Measuring and Maximizing Impact of COVID-19 Contact Tracing</a> from Johns Hopkins University </li>
 
-                            <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/strategies-senior-housing-covid19?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-T8DNmrt.oTBAfHLazs5qkQ&siteID=SAyYsTvLiGQ-T8DNmrt.oTBAfHLazs5qkQ&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                            <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/strategies-senior-housing-covid19?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-T8DNmrt.oTBAfHLazs5qkQ&siteID=SAyYsTvLiGQ-T8DNmrt.oTBAfHLazs5qkQ&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                     class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Strategies for Senior Housing Communities during COVID-19 </a> from Johns Hopkins University </li>
 
-                            <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/strategies-assisted-living-covid19?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-a7acHjJk_6RU5a2pIerB4A&siteID=SAyYsTvLiGQ-a7acHjJk_6RU5a2pIerB4A&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
+                            <li class="list-group-item list-group-item-dark text-white" style="background-color: #343a40;"><a href="https://www.coursera.org/learn/strategies-assisted-living-covid19?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-a7acHjJk_6RU5a2pIerB4A&siteID=SAyYsTvLiGQ-a7acHjJk_6RU5a2pIerB4A&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
                                     class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Strategies for Assisted Living Communities during COVID-19 </a> from Johns Hopkins University </li>
                         </ul>
                     </ul>
