--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <div class="col-sm-4">
                     <img src="img/edx2x2-logo.png" alt="" class="mx-auto d-block img-fluid">
-                    <p class="text-center" style="margin-top:-10px;"><a href="#" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
+                    <p class="text-center" style="margin-top:-10px;"><a href="edx-free-courses.html" class="text-white text-decoration-none" style="border:3px solid #fff;padding:5px;">View Course</a></p>
                 </div>
             </div>
 
