content added for april 13 2021

--- a/udemy-free-courses.html
+++ b/udemy-free-courses.html
@@ -43,8 +43,145 @@
                 </div>
 
                 <div class="card-body">
+
+                    <h3 class="card-title" style=" color: rgb(4, 217, 255);">Courses for 13 April 2021</h3>
+                    <p class=" card-text text-white ">Note : Coupon code is available for limited time only</p>
+
+                    <ul class="list-group list-group-flush ">
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/relative-strength-index-rsi-technical-analysis-indicator/?couponCode=1APR21" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Relative Strength index (RSI) Technical Analysis Indicator</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/the-complete-wordpress-developer-course-w/?couponCode=CAA9753AB19293D7CFDF" class="text-white text-decoration-none " style=" cursor:
+                        pointer; "><i class="bi bi-link "></i> Complete WordPress Website Developer Course</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/adobe-photoshop-cc-basic-photoshop-training/?couponCode=3319061516A06AAF2C6F" class="text-white text-decoration-none " style=" cursor:
+                        pointer; "><i class="bi bi-link "></i> Adobe Photoshop CC- Basic Photoshop training</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/business-analytics-with-python-2021/?couponCode=ANALYTICS12" class="text-white text-decoration-none " style=" cursor:
+                        pointer; "><i class="bi bi-link "></i> Business Analytics with Python 2021</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/microsoft-excel-basic-excel-advanced-excel-formulas/?couponCode=FD2E7452DC22A7AC09B9" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Microsoft Excel -Basic Excel/ Advanced Excel Formulas</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/ultimate-adobe-photoshop-cc-masterclass-basics-to-advanced/?couponCode=FREEPHOTOSHOPCC" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Ultimate Adobe Photoshop CC Masterclass Basics To Advanced</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/the-complete-html-css-bootcamp-zero-to-hero-html-css/?couponCode=HTML-CSS2" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> The Complete HTML&CSS Bootcamp 2021: Zero to Hero HTML&CSS </a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/complete-sql-bootcamp-from-zero-to-hero-sql/?couponCode=SQL-APRIL2" class="text-white text-decoration-none " style=" cursor:
+                                pointer; "><i class="bi bi-link "></i> The Complete SQL Bootcamp 2021: from Zero to Hero SQL  </a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/the-complete-java-from-zero-to-hero2021/?couponCode=JAVA-APRIL2" class="text-white text-decoration-none " style=" cursor:
+                        pointer; "><i class="bi bi-link "></i> Java 2021:Complete Java Masterclass:Zero to Hero Programming </a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/outsource-mastery/?couponCode=APR21FREEOUTSOURCE" class="text-white text-decoration-none " style=" cursor:
+                        pointer; "><i class="bi bi-link "></i> Outsource Mastery: How To Earn More Money By Doing Less Work </a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/active-listening-skills/?couponCode=E72AF201F794A6892877" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Active Listening Skills To Give And Receive Feedback At Work </a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/more-confidence-and-self-esteem/?couponCode=ED800CAFCF7B63C3DC9D" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Self Confidence & Self Esteem: Confidence Via Self-Awareness</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/content-marketing-course-/?couponCode=DOGOOD7777777" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Copywriting & Content Marketing Course: Be a PRO Copywriter</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/emotional-intelligence-and-resilience/?couponCode=APR2021" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Emotional Intelligence and Resilience</a></li>
+
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/statistics-with-r-beginner-level/?couponCode=PARSECODE" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Statistics with R – Beginner Level</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/5g-nr-new-radio-radio-access-networks/?couponCode=7DE4E9D6DD09AEEED2C1" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> 5G Masterclass: Architecture, NR RAN, Core and Call flows</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/complete-python-bootcamp-for-beginners/?couponCode=PYTHON-APRIL2" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Python 2021:Complete Python Bootcamp:Zero-Hero Programming</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/make-money-with-cryptocurrencies-in-2018-a-solid-strategy/?couponCode=928C05ABF03AB183FF02" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Cryptocurrency Course: Learn to Make Money Online WORLDWIDE!</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/contracts-management-in-construction-projects/?couponCode=CONTRACTSFREEAPR" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Contracts Management in Construction Projects</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/first-steps-into-selling-smarter-t/?couponCode=APRIL2021" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> First Steps Into Selling Smarter</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/the-complete-microsoft-sharepoint-masterclass/?couponCode=SHAREPOINTFREE" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> The Complete Microsoft SharePoint MasterClass</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/complete-sql-bootcamp-with-mysql-php-python/?couponCode=SQLBAPR2021" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> SQL Bootcamp with MySQL, PHP & Python : 5 Courses in 1</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/build-responsive-website-using-html5-css3-js-and-bootstrap-p/?couponCode=PROGRAMMING_LEARNERS" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Complete JAVASCRIPT with HTML5,CSS3 from zero to Expert-2021</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/ultimate-beginners-guide-to-open-broadcaster-softwareobs/?couponCode=3167F17AD8CBD9CBF267" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> OBS Studio – Ultimate Livestreaming Guide to OBS Studio</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/1z0-516-oracle-ebs-general-ledger-fundamental-part-2/?couponCode=ORAC-516" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> 1Z0-516 Oracle EBS General Ledger Fundamental Part 2</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/lean-six-sigma-green-belt-certification-and-training/?couponCode=GREEN12" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Lean Six Sigma Green Belt Certification and Training</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/business-analytics-with-python-2021/?couponCode=ANALYTICS12" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Business Analytics with Python 2021</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/te0-01a-12-fundamentals-teradata-certified-practice-exam/?couponCode=TE0-01A" class="text-white text-decoration-none " style=" cursor:
+                        pointer; "><i class="bi bi-link "></i> TE0-01A 12 Fundamentals Teradata Certified Practice Exam</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/agile-project-management-genman/?couponCode=AGILEAPRILXII" class="text-white text-decoration-none " style=" cursor:
+                        pointer; "><i class="bi bi-link "></i> Agile Project Management: Agile, Scrum, Kanban & XP</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/color-grading-and-video-editing-with-davinci-resolve/?couponCode=9490311574F5FB653383" class="text-white text-decoration-none " style=" cursor:
+                        pointer; "><i class="bi bi-link "></i> Color Grading and Video Editing with Davinci Resolve 17</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/drupal-masterclass/?couponCode=A9F28AFB2F530E4ED972" class="text-white text-decoration-none " style=" cursor:
+                        pointer; "><i class="bi bi-link "></i> Drupal For Absolute Beginners (2021)</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/learn-javascript-step-by-step-in-hindi/?couponCode=E5CB68F1967086925603" class="text-white text-decoration-none " style=" cursor:
+                        pointer; "><i class="bi bi-link "></i> Javascript Programming</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/ielts-speaking-all-you-need-to-know/?couponCode=RAMADAN_FREE" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> IELTS Speaking Exam – all you need to know</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/create-amazing-vue-apps-with-javascript/?couponCode=C606F93CA6CA31F14105" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Create Amazing Vue Apps with Javascript</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/python-and-flask-only-demonstration-course/?couponCode=7375EDC1C3FC510878EC" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Python And Flask Demonstrations Practice Course </a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/python-and-django-for-beginners/?couponCode=474E952DF15ABD453B65" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Python And Django Framework For Beginners Complete Course </a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/how-to-make-passive-income-with-bitcoin-lending/?couponCode=APRFRNGWNRAS2021" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> How to Make Passive Income With Bitcoin Lending </a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/learn-excel-from-beginner-to-advance-with-example/?couponCode=NEW100" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Learn Excel from beginner to advance with Example</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/ultimate-wordpress-optimization-2020/?couponCode=8599636234581A4327C6" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> Ultimate WordPress Optimization 2020</a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/seo-tutorial-for-beginners-course/?couponCode=1B36083C9E875A316E18" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> S.E.O Tutorial For Beginners 8h Full Course </a></li>
+
+                        <li class="list-group-item bg-dark" style="background-color: #343a40;"><a href="https://www.udemy.com/course/cinema-theatre-depression-2/?couponCode=SPRINGNEW" class="text-white text-decoration-none " style=" cursor:
+                            pointer; "><i class="bi bi-link "></i> What we can learn from cinema/theatre about depression </a></li>
+
+
+
+
+                    </ul>
+
+
+
                     <h3 class="card-title" style=" color: rgb(4, 217, 255);">Courses for 12 April 2021</h3>
-                    <p class=" card-text text-white ">Note : Coupon code is available for </p>
+                    <p class=" card-text text-white ">Note : Coupon code is available for limited time only</p>
 
                     <ul class="list-group list-group-flush ">
 
