--- a/edx-free-courses.html
+++ b/edx-free-courses.html
@@ -25,9 +25,8 @@
 
                     <img src="img/edx2x2-logo.png" alt="" class="img-fluid css-img" style="width: 100px; height:auto;">
 
-                    <p class="text-white mx-auto d-block" style="margin-top: -10px;">Every individual has the potential to create change, whether in their life, their community, or the world. The transformative power of education is what unlocks that potential. Yet, access to high-quality education has been a privilege
-                        of the few. Back in 2012, we realized it was a time for a seismic shift in learning. From the tried and true to the leading edge. From “for some” to “for all.” By opening the classroom through online learning, edX empowers millions
-                        of learners to unlock their potential and become changemakers.</p>
+                    <p class="text-white mx-auto d-block" style="margin-top: -10px;">edX is an American massive open online course provider created by Harvard and MIT. It hosts online university-level courses in a wide range of disciplines to a worldwide student body, including some courses at no charge. It also conducts
+                        research into learning based on how people use its platform.</p>
 
                     <button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button>
                     <p class="text-white"><i>Your donations will be a gift for others.</i></p>
@@ -37,69 +36,22 @@
                 </div>
             </div>
         </section>
+        <div class="container" style="margin-top:170px;">
 
-        <section class="container" style="margin-top:170px; margin-bottom: 100px;">
-            <div class="card bg-primary">
-                <div class="card-header">
-                    <h2 class="card-title" style=" color: rgb(9, 218, 255);">Coursera Free Certificate Courses</h2>
-                </div>
-
-                <div class="card-body">
-                    <p class="card-text text-white">You can only choose one course below</p>
-                    <p class="card-text text-white"><i>Note: Course is free until <b>April 30, 2021</b></i></p>
-
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/financial-planning?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-Jn.6QQg7LeY_eK4JBLrd4w&siteID=SAyYsTvLiGQ-Jn.6QQg7LeY_eK4JBLrd4w&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link "></i> Financial Planning for Young Adults</a> from University of Illinois at Urbana-Champaign</li>
-
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/feedback?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-BdIvr59cn4fw31t7SAQeVg&siteID=SAyYsTvLiGQ-BdIvr59cn4fw31t7SAQeVg&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Giving Helpful Feedback</a> from University of Colorado Boulder</li>
-
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/machine-learning-duke?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-XBjXYbd6DVpT3BuJNjNshA&siteID=SAyYsTvLiGQ-XBjXYbd6DVpT3BuJNjNshA&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Introduction to Machine Learning</a> from Duke University</li>
-
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/compthinking?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-q6Y790raoGK6as3_UbSusA&siteID=SAyYsTvLiGQ-q6Y790raoGK6as3_UbSusA&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Problem Solving Using Computational Thinking</a> from University of Michigan</li>
-
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/inclusiveleadership?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-AfxtpM_eLIBwR5XlkuUS.w&siteID=SAyYsTvLiGQ-AfxtpM_eLIBwR5XlkuUS.w&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Inclusive Leadership: The Power of Workplace Diversity</a> from University of Colorado System</li>
-
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://click.linksynergy.com/deeplink?id=SAyYsTvLiGQ&mid=40328&u1=gtc_www_classcentral_com&murl=https%3A%2F%2Fwww.coursera.org%2Flearn%2Fmusic-for-wellness%3Fedocomorp%3Dcoursera-birthday-2021" class="text-white text-decoration-none"
-                                style="cursor: pointer;"><i class="bi bi-link"></i> Music for Wellness</a> from Berklee College of Music</li>
-
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/building-modern-python-applications-on-aws?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-ePEgf.dnlPfJlWOOCZAhNA&siteID=SAyYsTvLiGQ-ePEgf.dnlPfJlWOOCZAhNA&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                style="cursor: pointer;" class="text-white text-decoration-none"><i class="bi bi-link"></i> Building Modern Python Applications on AWS</a> from Amazon Web Services</li>
-
-                        <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/develop-windows-apps-gcp?edocomorp=coursera-birthday-2021&ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-POM1aSNoqHQjagHqU6ZWFw&siteID=SAyYsTvLiGQ-POM1aSNoqHQjagHqU6ZWFw&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Develop and Deploy Windows Applications on Google Cloud Platform</a> from Google Cloud</li>
-
-                        <div class="card-header">
-                            <h5 class="card-title" style=" color: rgb(9, 218, 255);">Johns Hopkins & Stanford COVID-19 Courses with Free Certificates</h5>
-                        </div>
-                        <p class="card-text text-white">These free certificates are a different offer from the above list and are available until and past July 28th, 2021.</p>
-
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/covid-19-contact-tracing?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-NAPi0XIlQ2dr0FCME0bLGQ&siteID=SAyYsTvLiGQ-NAPi0XIlQ2dr0FCME0bLGQ&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                    class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> COVID-19 Contact Tracing</a> from Johns Hopkins University</li>
-
-                            <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/covid-19-training-healthcare?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-35OA43NLD0QOWorswDwbKw&siteID=SAyYsTvLiGQ-35OA43NLD0QOWorswDwbKw&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                    class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> COVID-19 Training for Healthcare Workers</a> from Stanford University</li>
-
-                            <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/measuring-and-maximizing-impact-of-covid-19-contact-tracing?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-AdfkGChN64QHTHZwellO5g&siteID=SAyYsTvLiGQ-AdfkGChN64QHTHZwellO5g&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                    class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Measuring and Maximizing Impact of COVID-19 Contact Tracing</a> from Johns Hopkins University </li>
-
-                            <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/strategies-senior-housing-covid19?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-T8DNmrt.oTBAfHLazs5qkQ&siteID=SAyYsTvLiGQ-T8DNmrt.oTBAfHLazs5qkQ&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                    class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Strategies for Senior Housing Communities during COVID-19 </a> from Johns Hopkins University </li>
-
-                            <li class="list-group-item list-group-item-dark bg-primary text-white"><a href="https://www.coursera.org/learn/strategies-assisted-living-covid19?ranMID=40328&ranEAID=SAyYsTvLiGQ&ranSiteID=SAyYsTvLiGQ-a7acHjJk_6RU5a2pIerB4A&siteID=SAyYsTvLiGQ-a7acHjJk_6RU5a2pIerB4A&utm_content=10&utm_medium=partners&utm_source=linkshare&utm_campaign=SAyYsTvLiGQ"
-                                    class="text-white text-decoration-none" style="cursor: pointer;"><i class="bi bi-link"></i> Strategies for Assisted Living Communities during COVID-19 </a> from Johns Hopkins University </li>
-                        </ul>
-                    </ul>
-                    <br>
-                    <p class="card-text text-white">Source: <a href="https://www.classcentral.com/report/coursera-free-certificates/" class="text-white text-decoration-none"><b>The Report </b><i>by</i><small> Class Central</small></a></p>
-                </div>
+            <div class="container bg-primary p-2">
+                <h1 class="text-white ">Scholarships at edX</h1>
             </div>
-        </section>
+            <div class="container justify-content-center">
+                <p class="text-white">edX’s mission is to reimagine education by increasing access to high-quality education for everyone, everywhere. With a global reach and learners in all 196 countries around the world, edX seeks to democratize education by providing first-rate
+                    curriculum to the world from top-tiered universities to all those who wish to learn. </p>
+
+                <p class="text-white" p>While the majority of our courses are free to audit on edx.org, we have established a robust scholarship and financial assistance program to ensure all qualifying learners can afford to obtain verified credentials upon completion of our
+                    courses and programs. </p>
+
+                <p class="text-white" p>To support our expanding scholarship program, edX is launching a $10M Access for All campaign to drastically increase the number of learners edX can help gain access to life changing education, especially during a time of economic struggle
+                    and job loss caused by the COVID-19 pandemic.</p>
+            </div>
+        </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "></script>
