--- a/udemy-free-courses.html
+++ b/udemy-free-courses.html
@@ -45,7 +45,7 @@
                 <div class="card-body">
 
                     <h3 class="card-title" style=" color: rgb(4, 217, 255);">Courses for 13 April 2021</h3>
-                    <p class=" card-text text-white ">Note : Coupon code is available for limited time only</p>
+                    <p class=" card-text text-white "><i>Note : Coupon code is available for limited time only</i></p>
 
                     <ul class="list-group list-group-flush ">
 
@@ -181,7 +181,7 @@
 
 
                     <h3 class="card-title" style=" color: rgb(4, 217, 255);">Courses for 12 April 2021</h3>
-                    <p class=" card-text text-white ">Note : Coupon code is available for limited time only</p>
+                    <p class=" card-text text-white "><i>Note : Coupon code is available for limited time only</i></p>
 
                     <ul class="list-group list-group-flush ">
 
