--- a/edx-free-courses.html
+++ b/edx-free-courses.html
@@ -41,15 +41,46 @@
             <div class="container bg-primary p-2">
                 <h1 class="text-white ">Scholarships at edX</h1>
             </div>
-            <div class="container justify-content-center">
-                <p class="text-white">edX’s mission is to reimagine education by increasing access to high-quality education for everyone, everywhere. With a global reach and learners in all 196 countries around the world, edX seeks to democratize education by providing first-rate
-                    curriculum to the world from top-tiered universities to all those who wish to learn. </p>
+            <div class="container justify-content-center" style="margin-top: 25px;">
+                <div class="container">
+                    <div class="container">
+                        <p class="text-white">edX’s mission is to reimagine education by increasing access to high-quality education for everyone, everywhere. With a global reach and learners in all 196 countries around the world, edX seeks to democratize education by providing
+                            first-rate curriculum to the world from top-tiered universities to all those who wish to learn. </p>
 
-                <p class="text-white" p>While the majority of our courses are free to audit on edx.org, we have established a robust scholarship and financial assistance program to ensure all qualifying learners can afford to obtain verified credentials upon completion of our
-                    courses and programs. </p>
+                        <p class="text-white">While the majority of our courses are free to audit on edx.org, we have established a robust scholarship and financial assistance program to ensure all qualifying learners can afford to obtain verified credentials upon completion
+                            of our courses and programs. </p>
 
-                <p class="text-white" p>To support our expanding scholarship program, edX is launching a $10M Access for All campaign to drastically increase the number of learners edX can help gain access to life changing education, especially during a time of economic struggle
-                    and job loss caused by the COVID-19 pandemic.</p>
+                        <p class="text-white">To support our expanding scholarship program, edX is launching a $10M Access for All campaign to drastically increase the number of learners edX can help gain access to life changing education, especially during a time of economic
+                            struggle and job loss caused by the COVID-19 pandemic.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container" style="margin-top: 60px; margin-bottom: 100px;">
+                <div class="container">
+                    <div class="container">
+                        <div class="container">
+
+                            <h2 style=" color: rgb(4, 217, 255);">Scholarship Programs at edX</h2>
+
+                            <h3 class="text-white" style="margin-top: 30px;">The Macquarie Group Scholarship Program</h3>
+
+                            <div class="row">
+                                <div class="col-sm-2">
+                                    <img class="mx-auto d-block" src="img/macquarie.png" alt="macquarie logo" style="width: 100px;height:100px;">
+                                </div>
+                                <div class="col-sm-10">
+                                    <p class="text-white">The Macquarie Group Scholarship Program: In the wake of COVID-19, Macquarie Group has established this scholarship to support economic recovery by assisting learners seeking skills-based programming on edX. Preference
+                                        will be given learners from low-income and underrepresented groups in Australia, India, the United Kingdom, and the United States. Macquarie Group Scholarships cover 100% of the cost of any edX course for the learner.</p>
+
+
+                                    <a href="" class="text-white"><button class="btn bg-info text-white">Apply to The Macquarie Scholarship Program</button></a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
