--- a/edx-free-courses.html
+++ b/edx-free-courses.html
@@ -74,7 +74,8 @@
                                         will be given learners from low-income and underrepresented groups in Australia, India, the United Kingdom, and the United States. Macquarie Group Scholarships cover 100% of the cost of any edX course for the learner.</p>
 
 
-                                    <a href="" class="text-white"><button class="btn bg-info text-white">Apply to The Macquarie Scholarship Program</button></a>
+                                    <span class="text-white"> Apply to The Macquarie Scholarship Program</span>
+                                    <button class="btn btn-info">Apply now</button>
 
                                 </div>
                             </div>
