--- a/edx-free-courses.html
+++ b/edx-free-courses.html
@@ -74,7 +74,7 @@
                                         will be given learners from low-income and underrepresented groups in Australia, India, the United Kingdom, and the United States. Macquarie Group Scholarships cover 100% of the cost of any edX course for the learner.</p>
 
 
-                                    <span class="text-white"> Apply to The Macquarie Scholarship Program</span>
+                                    <span style=" color: rgb(4, 217, 255);"> <b>Apply to The Macquarie Scholarship Program</b></span>
                                     <button class="btn btn-info">Apply now</button>
 
                                 </div>
