--- a/edx-free-courses.html
+++ b/edx-free-courses.html
@@ -68,14 +68,15 @@
                             <div class="row">
                                 <div class="col-sm-2">
                                     <img class="mx-auto d-block" src="img/macquarie.png" alt="macquarie logo" style="width: 100px;height:100px;">
+
                                 </div>
                                 <div class="col-sm-10">
                                     <p class="text-white">The Macquarie Group Scholarship Program: In the wake of COVID-19, Macquarie Group has established this scholarship to support economic recovery by assisting learners seeking skills-based programming on edX. Preference
                                         will be given learners from low-income and underrepresented groups in Australia, India, the United Kingdom, and the United States. Macquarie Group Scholarships cover 100% of the cost of any edX course for the learner.</p>
+                                    <a href="https://www.edx.org/macquarie-scholarship-application"> <button class="btn btn-info mx-auto d-block text-white" style="margin-top:5px;">Apply now</button></a>
 
 
-                                    <span style=" color: rgb(4, 217, 255);"> <b>Apply to The Macquarie Scholarship Program</b></span>
-                                    <button class="btn btn-info">Apply now</button>
+                                    <!-- <span style=" color: rgb(4, 217, 255);"> <b>Apply to The Macquarie Scholarship Program</b></span> -->
 
                                 </div>
                             </div>
