--- a/edx-free-courses.html
+++ b/edx-free-courses.html
@@ -25,8 +25,8 @@
 
                     <img src="img/edx2x2-logo.png" alt="" class="img-fluid css-img" style="width: 100px; height:auto;">
 
-                    <p class="text-white mx-auto d-block" style="margin-top: -10px;">edX is an American massive open online course provider created by Harvard and MIT. It hosts online university-level courses in a wide range of disciplines to a worldwide student body, including some courses at no charge. It also conducts
-                        research into learning based on how people use its platform.</p>
+                    <p class="text-white mx-auto d-block" style="margin-top: -10px;"><a href="https://www.edx.org/" class="text-decoration-none" style=" color: rgb(9, 218, 255);">edX</a> is an American massive open online course provider created by Harvard and MIT. It hosts online university-level courses in a wide
+                        range of disciplines to a worldwide student body, including some courses at no charge. It also conducts research into learning based on how people use its platform.</p>
 
                     <button type="button" class="btn btn-info" style="margin-top:20px;"> <i class="bi bi-cash-stack"></i> Donate to SkillsFree</button>
                     <p class="text-white"><i>Your donations will be a gift for others.</i></p>
@@ -73,7 +73,7 @@
                             <div class="col-sm-10">
                                 <p class="text-white">The Macquarie Group Scholarship Program: In the wake of COVID-19, Macquarie Group has established this scholarship to support economic recovery by assisting learners seeking skills-based programming on edX. Preference will
                                     be given learners from low-income and underrepresented groups in Australia, India, the United Kingdom, and the United States. Macquarie Group Scholarships cover 100% of the cost of any edX course for the learner.</p>
-                                <a href="https://www.edx.org/macquarie-scholarship-application" class="text-decoration-none"> <button class="btn btn-info mx-auto d-block text-white" style="margin-top:5px;">Apply now</button></a>
+                                <a href="https://www.edx.org/macquarie-scholarship-application" class="text-decoration-none"> <button class="btn btn-info mx-auto d-block text-white" style="margin-top:5px;"><b>Apply now</b></button></a>
 
 
                                 <!-- <span style=" color: rgb(4, 217, 255);"> <b>Apply to The Macquarie Scholarship Program</b></span> -->
@@ -86,6 +86,10 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div w3-include-html="footer.html"></div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js "></script>
