--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
 
     </main>
 
+    <footer>
+        <div w3-include-html="footer.html"></div>
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
