--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1 class="css-text" style="margin-top: 100px; color: rgb(9, 218, 255);">SkillsFree</h1>
                 <p class="text-white"><i>Learn and earn certificates</i></p>
 
-                <p class="text-white mx-auto d-block" style="margin-top: 30px;">Learn anything, anywhere for free with <b style="color: rgb(9, 218, 255);">SkillsFree</b> list of courses from reputable learning platforms.</p>
+                <p class="text-white mx-auto d-block" style="margin-top: 30px;">Learn anything, anywhere for free with <b style="color: rgb(9, 218, 255);">SkillsFree</b> lists of courses from reputable learning platforms.</p>
 
                 <button type="button" class="btn btn-info" style="margin-top:20px;">Donate</button>
                 <p class="text-white"><i>Your donations will be a gift for others.</i></p>
