--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
 
     <section class="container" style="margin-top: 100px;">
+
         <div class="row gy-5 css-row">
             <div class="col-sm-6">
                 <h1 class="css-text" style="margin-top: 100px; color: rgb(9, 218, 255);">SkillsFree</h1>
@@ -35,6 +36,10 @@
     <main>
 
         <div class="container" style="margin-top:125px; margin-bottom:100px ;">
+
+            <div class="container bg-primary">
+                <h1 class="h1 text-white text-center">Free Courses</h1>
+            </div>
 
             <div class="row gy-5">
                 <div class="col-sm-4 ">
